Fixed positioning on navbar/master and setting them to visible false

--- a/LoveDev/LoveDev/Content/StyleSheet.css
+++ b/LoveDev/LoveDev/Content/StyleSheet.css
@@ -1,10 +1,15 @@
-﻿#signup_bg {
-    height:50px;
+﻿#header_navbar {
+    height: 50px;
     display: flex;
-    flex-flow: row-reverse;
+    flex-wrap: wrap;
+    align-content: space-between;
+    flex-direction: column;
 }
 
-#signup_header {
-    margin-right:8px;
-    align-items:center;
+#header_links {
+    padding-top: 12px;
+}
+
+#header_login {
+    
 }
